# ATeNNbolt

./: .gitignore  CMakeLists.txt  COGNITIVE_FUSION_REACTOR.md  COGNITIVE_IMPLEMENTATION_COMPLETE.md  CTestCustom.cmake  Makefile  demo_advanced_lsp.cpp  demo_cognitive_fusion_reactor.cpp  demo_external_lsp.cpp  demo_lsp_ui_integration.cpp  test_cognitive_fusion.cpp  test_cognitive_simple.cpp  valgrind.supp
.github/workflows/: aptitude-package.yml  chocolatey-package.yml  cmake-multi-platform.yml  debian-package.yml  e2e-ci.yml  release.yml  rpm-package.yml
build-coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-coverage/ggml/ggml.cpp/: Makefile  cmake_install.cmake  ggml-config.cmake
build-coverage/ggml/ggml.cpp/src/: Makefile  cmake_install.cmake
build-coverage/ggml/ggml.cpp/src/ggml-cpu/: Makefile  cmake_install.cmake
build-coverage/include/bolt/: platform_config.h
build-coverage/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: CodeCoverage.cmake  CrossPlatform.cmake  Documentation.cmake  PackageManager.cmake  Sanitizers.cmake
docs/planning/: approach1_implementation_plan.md  approach2_implementation_plan.md  breaking_changes_research.md  implementation_plan.md  llama_cpp_incompatibility_resolution.md  llama_cpp_research_findings.md  lsp_research_findings.md
ggml/llama.cpp/src/: llama-chat.cpp
include/bolt/ai/: ai_config_manager.hpp
include/bolt/cognitive/: agent_orchestrator.hpp  atomspace.hpp  fusion_reactor.hpp  neural_learnability.hpp  tensor_embedding.hpp
include/bolt/drawkern/: dis_vm.hpp
include/bolt/editor/: debugger_interface.hpp  integrated_editor.hpp  lsp_editor_bridge.hpp  lsp_json_rpc.hpp  lsp_protocol.hpp  lsp_server.hpp  lsp_server_configs.hpp
include/bolt/gui/: dark_theme.hpp  lsp_ui_components.hpp
include/bolt/lsp/: lsp_client.hpp
include/bolt/utils/: tensor_utils.hpp
src/bolt/ai/: direct_gguf_inference.cpp
src/bolt/cognitive/: atomspace.cpp
src/bolt/drawkern/: dis_vm.cpp
src/bolt/editor/: debugger_interface.cpp  debugger_ui.cpp  integrated_editor.cpp  lsp_client.cpp  lsp_editor_bridge.cpp  lsp_json_rpc.cpp  lsp_server_configs.cpp
src/bolt/gui/: bolt_gui_app.cpp  enhanced_dark_theme.cpp  lsp_ui_components.cpp
test/: CMakeLists.txt  test_ai_features.cpp  test_code_folding.cpp  test_e2e.cpp  test_lsp.cpp  test_network_optimizations.cpp
